# adiosvm

Tutorial/gray-scott/: CMakeLists.txt  size_calculator.py
Tutorial/gray-scott/analysis/: pdf_calc.cpp
Tutorial/gray-scott/simulation/: gray-scott.cpp  gray-scott.h  main-1.cpp  main-2.cpp  main-3.cpp  main.cpp  random_gen.cu  random_gen.h  settings-files.json  settings.cpp  settings.h  writer.cpp  writer.h
